      (iss #439).

version 11.1 (2023-10-05)
    * Updates AuthorizationResponse.parseResponseParameters(HTTPRequest) to use
      the new HTTPRequest methods.
    * Removes System.out.println in AuthenticationRequest.parse method.
    * Updates Nimbus JOSE+JWT to 9.35

version 11.2 (2023-10-09)
    * Adds static URIUtils.isLocalHost method.
    * Updates to commons-codec:commons-codec:1.15

version 11.3 (2023-10-18)
    * Updates the ClientAuthenticationVerifier to enable support of JWT ID
      reuse prevention for the "client_secret_jwt" and the "private_key_jwt"
      authentication methods.
    * Adds ExpendedJTIChecker interface for use by the
      ClientAuthenticationVerifier to enable JWT ID (jti) claim reuse
      prevention.

version 11.4 (2023-10-18)
    * JWTAssertionDetailsVerifier, JWTAuthenticationClaimsSetVerifier and
      ClientAuthenticationVerifier can be configured with an optional check to
      prevent expiration time (exp) JWT claims that are too far ahead of the
      current time. Intended to prevent DoS attacks against JWT assertion
      consumers that utilise a store to prevent JWT replay.
    * The default expiration time (exp) claim in JWTAuthenticationClaimsSet the
      constructor is reduced from 5 to 1 minute from the current system time.

version 11.5 (2023-10-23)
    * Adds a DefaultEntityStatementRetriever constructor to support custom
      HTTPRequestSender instances.
    * Moves the HTTPRequest.getConnectTimeout and getReadTimeout methods to the
      ReadOnlyHTTPRequest interface.

version 11.6 (2023-11-05)
    * Removes deprecated comma separator support in Scope.parse (iss #445).
    * Upgrades to com.nimbusds:content-type:2.3
    * Updates com.nimbusds:nimbus-jose-jwt:9.37
    * Updates to BouncyCastle 1.76 (1.8 on).
    * Updates to optional SAML dep org.apache.santuario:xmlsec:2.3.4
    * Updates to optional SAML dep com.google.guava:guava:32.0.1-jre