@@ -29,26 +29,70 @@ public final class ContentTypeUtils {
 
 
 	/**
-	 * Ensures the content type of an HTTP header matches an expected 
-	 * value. Note that this method compares only the primary type and 
-	 * subtype; any content type parameters, such as {@code charset}, are 
-	 * ignored.
+	 * Ensures the {@code Content-Type} of an HTTP header matches an
+	 * expected value. Note that this method compares only the primary type
+	 * and subtype; any content type parameters, such as {@code charset},
+	 * are ignored.
 	 *
 	 * @param expected The expected content type. Must not be {@code null}.
 	 * @param found    The found content type. May be {@code null}.
 	 *
 	 * @throws ParseException If the found content type is {@code null} or
-	 *                        it primary and subtype and doesn't match the
-	 *                        expected.
+	 *                        doesn't match the expected.
 	 */
 	public static void ensureContentType(final ContentType expected, final ContentType found)
 		throws ParseException {
 	
-		if (found == null)
+		ensureContentType(expected, null, found);
+	}
+
+
+	/**
+	 * Ensures the {@code Content-Type} of an HTTP header matches an
+	 * expected value. Note that this method compares only the primary type
+	 * and subtype; any content type parameters, such as {@code charset},
+	 * are ignored.
+	 *
+	 * @param expected      The expected content type. Must not be {@code null}.
+	 * @param subTypeSuffix Acceptable suffix if the sub type doesn't
+	 *                      match exactly, {@code null} if not specified.
+	 * @param found         The found content type. May be {@code null}.
+	 *
+	 * @throws ParseException If the found content type is {@code null} or
+	 *                        doesn't match the expected.
+	 */
+	public static void ensureContentType(final ContentType expected,
+					     final String subTypeSuffix,
+					     final ContentType found)
+		throws ParseException {
+
+		if (found == null) {
 			throw new ParseException("Missing HTTP Content-Type header");
-		
-		if (! expected.matches(found))
-			throw new ParseException("The HTTP Content-Type header must be " + expected.getType() + ", received " + found.getType());
+		}
+
+		if (expected.matches(found)) {
+			// Exact match
+			return;
+		}
+
+		if (expected.getBaseType().equals(found.getBaseType()) && found.hasSubTypeSuffix(subTypeSuffix)) {
+			// Base + suffix match
+			return;
+		}
+
+		if (subTypeSuffix == null) {
+
+			throw new ParseException("The HTTP Content-Type header must be " +
+				expected.getType() +
+				", received " + found.getType());
+
+		} else {
+
+			throw new ParseException("The HTTP Content-Type header must be " +
+				expected.getType() +
+				" or have the +" + subTypeSuffix + " suffix, " +
+				"received " + found.getType());
+		}
 	}
 	
 
